fix rustic bugg

--- a/scratch/mg/diz.html
+++ b/scratch/mg/diz.html
@@ -32,6 +32,8 @@ function start() {
   window.setTimeout(forever, delta + 6950);
 }
 window.onload = start;
-</script></head><body style="width:100%; height:100%; overflow: hidden">
-<div style="overflow: hidden; margin: 40% 30%; padding: 10%; border: 2px solid black; background-color: #CCC; text-align: center;" id="update">Updating</div>
+</script><style type="text/css">
+ .inner { overflow: hidden; margin: 20% 30%; padding: 10%; border: 2px solid black; background-color: #CCC; text-align: center; font-weight: bold; }
+</style>
+</head><body style="width:100%; height:100%; overflow: hidden"><div class="outer"><div class="middle"><div class="inner" id="update">Updating</div></div></div>
 </body></html>
