--- a/util/big_ep_templates/xia2_table.html
+++ b/util/big_ep_templates/xia2_table.html
@@ -1,5 +1,5 @@
 {% if scaler_stats %}
-{% for name, ds in scaler_stats.iteritems() %}
+{% for name, ds in scaler_stats.items() %}
 <table style="width: 800px; border-top: 1px solid #cccccc; border-spacing: 0 5px; font-size: 12px; font-family: arial"width="800" bgcolor="#ebebeb">
     <thead valign="bottom">
         <tr>
@@ -27,18 +27,18 @@
                         'Rpim(I)',
                         'Rpim(I+/-)',
                         'CC half',
-                        'Wilson B factor',      
+                        'Wilson B factor',
                         'Anomalous completeness',
                         'Anomalous multiplicity',
                         'Anomalous correlation',
                         'Anomalous slope',
-                        'dF/F',      
-                        'dI/s(dI)',      
+                        'dF/F',
+                        'dI/s(dI)',
                         'Total observations',
                         'Total unique'] %}
         <tr>
             <th align="left">{{ stat }}</th>
-            {% for v in ds[stat] %} 
+            {% for v in ds[stat] %}
             <td>{{ v }}</td>
             {% endfor %}
         </tr>
