Initial commit of HTCondor support

--- a/src/dlstbx/util/big_ep_templates/parameter_table.html
+++ b/src/dlstbx/util/big_ep_templates/parameter_table.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <th align="left">Dataset type</th>
-            <td style="font-size: 14px; padding-right: 10px;" align="right">{{ settings.dataset }}</td>
+            <td style="font-size: 14px; padding-right: 10px;" align="right">{{ settings.dataset_names }}</td>
         </tr>
         <tr>
             <th align="left">Compound</th>
